[gd_scene load_steps=5 format=3 uid="uid://cbvfri0r6bdj6"]

[ext_resource type="Script" path="res://PlayerMovement.gd" id="1_qxc23"]
[ext_resource type="PackedScene" uid="uid://dakr8edlu215b" path="res://fembase.blend" id="2_1jsbt"]
[ext_resource type="Script" path="res://Camera.gd" id="3_v7wnc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ct170"]
radius = 0.631551
height = 3.89715

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_qxc23")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.80628, 0)
shape = SubResource("CapsuleShape3D_ct170")

[node name="PlayerMesh" type="MeshInstance3D" parent="."]

[node name="fembase" parent="PlayerMesh" instance=ExtResource("2_1jsbt")]

[node name="AimCamRoot" type="Node3D" parent="PlayerMesh"]
unique_name_in_owner = true

[node name="h" type="Node3D" parent="PlayerMesh/AimCamRoot"]

[node name="v" type="Node3D" parent="PlayerMesh/AimCamRoot/h"]

[node name="aimCamPos" type="Node3D" parent="PlayerMesh/AimCamRoot/h/v"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.99975, -2.81845)

[node name="aimcam" type="Camera3D" parent="PlayerMesh/AimCamRoot/h/v/aimCamPos"]

[node name="MainCamRoot" type="Node3D" parent="."]
script = ExtResource("3_v7wnc")

[node name="h" type="Node3D" parent="MainCamRoot"]

[node name="v" type="Node3D" parent="MainCamRoot/h"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04297, 0)

[node name="mainCamPos" type="Node3D" parent="MainCamRoot/h/v"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 4.61273, 3.79618)

[node name="cam" type="Camera3D" parent="MainCamRoot/h/v/mainCamPos"]
